[package]
name = "nmt-rs"
version = "0.1.0"
edition = "2021"
description = "A namespaced merkle tree compatible with Celestia"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
repository = "https://github.com/sovereign-labs/nmt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
bytes = { version = "1", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
borsh = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
nmt-rs = { path = ".", features = ["borsh", "serde"]}
borsh = { version = "1" }
serde_json = "1.0.96"
postcard = { version = "1.0.4" }
tendermint = { version = "0.35.0" }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "postcard/use-std"]
borsh = ["dep:borsh", "std"]
