[package]
name = "nmt-rs"
version = "0.2.1"
edition = "2021"
description = "A namespaced merkle tree compatible with Celestia"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
repository = "https://github.com/sovereign-labs/nmt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.6", default-features = false }
bytes = { version = "1", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
borsh = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
nmt-rs = { path = ".", features = ["borsh", "serde"] }
borsh = { version = "1" }
serde_json = "1.0.96"
postcard = { version = "1.0.4", features = ["use-std"] }
tendermint = { version = "0.35.0" }

[features]
default = ["std"]
borsh = ["dep:borsh"]
serde = [
	"dep:serde",
	"bytes/serde",
	"nmt-rs/serde"
]
std = [
	"borsh?/std",
	"serde?/std",
	"bytes/std",
	"sha2/std"
]
